# mcp_demo

./: .gitignore  README.md  client.py  configuration.py  github_example.py  llm.py  pyproject.toml
mongodb/: __init__.py  mongodb_mcp.py
postgres/: __init__.py  postgres_mcp.py
qdrant/: __init__.py  qdrant_mcp.py
tavily/: __init__.py  tavily_mcp_server.py
