[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.2.15",
    "aiohttp>=3.11.18",
    "anthropic>=0.49.0",
    "asyncpg>=0.30.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.33.0",
    "azure-identity>=1.21.0",
    "azure-keyvault-secrets>=4.9.0",
    "beanie>=1.29.0",
    "fastembed>=0.6.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "openai>=1.75.0",
    "orjson>=3.10.16",
    "pydantic-settings>=2.8.1",
    "qdrant-client>=1.13.3",
    "sqlalchemy>=2.0.40",
    "tavily-python>=0.5.4",
]
